--- a/SEMAi/SEMA_1D/SEMA-1D_finetuning.ipynb
+++ b/SEMAi/SEMA_1D/SEMA-1D_finetuning.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +115,9 @@
     "                type of model: regression or binary\n",
     "        \"\"\"\n",
     "        self.df = df\n",
-    "        _, esm1v_alphabet = esm.pretrained.esm1v_t33_650M_UR90S_1()\n",
+    "#         _, esm1v_alphabet = esm.pretrained.esm1v_t33_650M_UR90S_1()\n",
+    "#         _, esm1v_alphabet = torch.hub.load(\"facebookresearch/esm:main\", \"esm1b_t33_650M_UR50S\")\n",
+    "        _, esm1v_alphabet = torch.hub.load(\"facebookresearch/esm:main\", \"esm1v_t33_650M_UR90S_1\")\n",
     "        self.esm1v_batch_converter = esm1v_alphabet.get_batch_converter()\n",
     "        self.label_type = label_type\n",
     "\n",
@@ -133,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -227,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -254,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -274,14 +276,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
     "train_set = pd.read_csv('../data/train_set.csv')\n",
     "train_set = train_set.groupby('pdb_id_chain').agg({'resi_pos': list,\n",
     "                                 'resi_aa': list,\n",
-    "                                 'contact_number': list}).reset_index()\n",
+    "                                 'contact_number': list}).reset_index()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# _, esm1v_alphabet = torch.hub.load(\"facebookresearch/esm:main\", \"esm1b_t33_650M_UR50S\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using cache found in ../torch_hub/hub/facebookresearch_esm_main\n",
+      "Downloading: \"https://dl.fbaipublicfiles.com/fair-esm/models/esm1v_t33_650M_UR90S_1.pt\" to ../torch_hub/hub/checkpoints/esm1v_t33_650M_UR90S_1.pt\n"
+     ]
+    }
+   ],
+   "source": [
     "## the first run will take about 5-10 minutes, because esm weights should be downloaded\n",
     "train_ds = PDB_Dataset(train_set[['resi_aa', 'contact_number']], \n",
     "                      label_type ='regression')"
@@ -414,11 +442,25 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -432,7 +474,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.0"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
