--- a/SEMAi/SEMA_3D/SEMA-3D_finetuning.ipynb
+++ b/SEMAi/SEMA_3D/SEMA-3D_finetuning.ipynb
@@ -3,7 +3,11 @@
   {
    "cell_type": "markdown",
    "id": "8b260ce8",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "# SEMA-3D"
    ]
@@ -11,7 +15,11 @@
   {
    "cell_type": "markdown",
    "id": "b1314793",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "**SEMA-3D** is a fine-tuned ESM-IF1 model aimed to predict epitope resiudes based on therity structures"
    ]
@@ -19,7 +27,11 @@
   {
    "cell_type": "markdown",
    "id": "d8641619",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "The MIT License (MIT)\n",
     "\n",
@@ -47,7 +59,11 @@
   {
    "cell_type": "markdown",
    "id": "af9e552b",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "### Finetuning ESM-IF1 for epitope prediction tasks"
    ]
@@ -56,7 +72,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "211e24f3",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "import os\n",
@@ -70,7 +90,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "ba960ea6",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "import copy\n",
@@ -109,7 +133,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "fe30d66a",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "def esmStructDataset(pdb_path):\n",
@@ -148,7 +176,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "f03890ce",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "def create_Dataset(path='../data/pdb_structures.pkl'):\n",
@@ -174,7 +206,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "941b969f",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "class epitopes_Dataset(Dataset):\n",
@@ -238,7 +274,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "c28d31ff",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "class ESM1vForTokenClassification(nn.Module):\n",
@@ -263,7 +303,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "7eaf4f68",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "def compute_metrics_quntative(p: EvalPrediction):\n",
@@ -286,7 +330,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "fac6df3b",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "def model_init():\n",
@@ -297,7 +345,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "186cee5b",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "class MaskedMSELoss(torch.nn.Module):\n",
@@ -334,7 +386,11 @@
   {
    "cell_type": "markdown",
    "id": "2f139141",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "## Data"
    ]
@@ -343,7 +399,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "a4d6268e",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "esm_structs = create_Dataset(path='../data/pdb_structures.pkl')"
@@ -353,7 +413,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "4168b128",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "print('Number of structures:', len(esm_structs.keys()))"
@@ -363,7 +427,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "fe729e13",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "train_set = pd.read_csv('../data/train_set.csv')\n",
@@ -383,7 +451,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "b4fbf8bb",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "test_set = pd.read_csv('../data/test_set.csv')\n",
@@ -400,7 +472,11 @@
   {
    "cell_type": "markdown",
    "id": "fe128238",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "## Model training and test "
    ]
@@ -409,7 +485,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "d506858d",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "training_args = TrainingArguments(\n",
@@ -441,7 +521,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "db213ab6",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "#create direactory to weights storage\n",
@@ -453,7 +537,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "b2cca9d2",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "# torch.cuda.empty_cache()\n",
@@ -475,7 +563,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "f82b9fcf",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": []
   }
