--- a/SEMAi/SEMA_3D/SEMA-3D_inference.ipynb
+++ b/SEMAi/SEMA_3D/SEMA-3D_inference.ipynb
@@ -3,7 +3,11 @@
   {
    "cell_type": "markdown",
    "id": "53a5aea8",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "# SEMA-3D"
    ]
@@ -11,7 +15,11 @@
   {
    "cell_type": "markdown",
    "id": "a64e2de7",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "The MIT License (MIT)\n",
     "\n",
@@ -40,7 +48,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "14aec83c",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "import os\n",
@@ -54,7 +66,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "54f2ba76",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "import os\n",
@@ -91,7 +107,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "79230238",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "def esmStructDataset(pdb_path,chain):\n",
@@ -123,7 +143,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "484f1690",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "class ESM1vForTokenClassification(nn.Module):\n",
@@ -148,7 +172,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "d32c04d4",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "def loadModel(path = \"../models/sema_3d_cn_atom_r1_8.0_r2_18.0_0.pth\"):\n",
@@ -161,7 +189,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "b4878240",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "model = loadModel()"
@@ -171,7 +203,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "ee2c488c",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "_, alphabet = esm.pretrained.esm_if1_gvp4_t16_142M_UR50()"
@@ -181,7 +217,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "2dade105",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "def get_prediction(sema_models, PDB_path, chain):\n",
@@ -207,7 +247,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "37432cd0",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "sema_predictions = get_prediction([model], \"../data/test_pdb.pdb\", \"A\")"
@@ -217,7 +261,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "9917375c",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "sema_predictions"
@@ -227,7 +275,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "865c4642",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": []
   }
